Twig Assets extension added, NPM integration, assets in modules integration

--- a/app/code/App/view/templates/layout.html
+++ b/app/code/App/view/templates/layout.html
@@ -6,11 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% block head %}
-        <link rel="stylesheet" href="style.css" />
         <title>{% block title %}{% endblock %} - Madeira Madeira Project</title>
+        {{ assets({files: ['@js_lib/bootstrap/dist/css/bootstrap.min.css']}) }}
+        {{ assets({files: ['@js_lib/bootstrap/dist/js/bootstrap.min.js']}) }}
     {% endblock %}
 </head>
 <body>
 <div id="content">{% block content %}{% endblock %}</div>
+
 </body>
 </html>
