--- a/app/code/App/view/templates/layout.html
+++ b/app/code/App/view/templates/layout.html
@@ -5,14 +5,24 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     {% block head %}
         <title>{% block title %}{% endblock %} - Madeira Madeira Project</title>
         {{ assets({files: ['@js_lib/bootstrap/dist/css/bootstrap.min.css']}) }}
-        {{ assets({files: ['@js_lib/bootstrap/dist/js/bootstrap.min.js']}) }}
     {% endblock %}
 </head>
 <body>
-<div id="content">{% block content %}{% endblock %}</div>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    {% embed "@app/layout/nav.html" %}{% endembed %}
+    </nav>
 
+    <main role="main" class="container">
+        {% block content %}{% endblock %}
+    </main>
+
+    {% block js_footer %}
+    {{ assets({files: ['@js_lib/jquery/dist/jquery.min.js']}) }}
+    {{ assets({files: ['@js_lib/bootstrap/dist/js/bootstrap.min.js']}) }}
+    {% endblock %}
 </body>
 </html>
