Template admin ok

--- a/app/code/Auth/view/templates/login.html
+++ b/app/code/Auth/view/templates/login.html
@@ -13,8 +13,8 @@
     {% block head %}
     <title>{% block title %}{% endblock %} Madeira Madeira Project</title>
     <!-- Custom CSS -->
-    {{ assets({files: ['@auth/assets/styles.css']}) }}
-    {{ assets({files: ['@auth/assets/custom.css']}) }}
+    {{ assets({files: ['@admin/assets/styles.css']}) }}
+    {{ assets({files: ['@admin/assets/custom.css']}) }}
     {% endblock %}
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
