--- a/app/code/Admin/view/templates/layout.html
+++ b/app/code/Admin/view/templates/layout.html
@@ -9,14 +9,17 @@
         <meta name="author" content="">
         <!-- Favicon icon -->
         <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
-        {% block head %}
-        <title>{% block title %}{% endblock %} Madeira Madeira Project</title>
-        <!-- Custom CSS -->
         {{ assets({files: ['@admin/assets/styles.css']}) }}
         {{ assets({files: ['@js_lib/bootstrap/dist/css/bootstrap.min.css']}) }}
         {{ assets({files: ['@admin/assets/float-chart.css']}) }}
+        {{ assets({files: ['@admin/assets/toastr.min.css']}) }}
         {{ assets({files: ['@admin/assets/custom.css']}) }}
+        {% block head %}
+        <title>{% block title %}{% endblock %} Madeira Madeira Project</title>
+        <!-- Custom CSS -->
         {% endblock %}
+
+
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -58,7 +61,7 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav" class="p-t-30">
 
-                        <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark" href="" aria-expanded="false"><i class="mdi mdi-face"></i><span class="hide-menu">Users</span></a>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark" href="/admin/user" aria-expanded="false"><i class="mdi mdi-face"></i><span class="hide-menu">Users</span></a>
                             <!-- <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="icon-material.html" class="sidebar-link"><i class="mdi mdi-emoticon"></i><span class="hide-menu"> Material Icons </span></a></li>
                                 <li class="sidebar-item"><a href="icon-fontawesome.html" class="sidebar-link"><i class="mdi mdi-emoticon-cool"></i><span class="hide-menu"> Font Awesome Icons </span></a></li>
@@ -104,15 +107,20 @@
             <!-- Container fluid  -->
             <!-- ============================================================== -->
             <div class="container-fluid">
-
+                {% block content %}
+                <div class="starter-template">
+                    <h1>Madeira Madeira Project Example</h1>
+                    <p class="lead"></p>
+                </div>
+                {% endblock %}
             </div>
         </div>
         <footer class="footer text-center">
-            Developed by <a href="#">Rafael Ortega Bueno</a>.
+            Developed by Rafael Ortega Bueno.
         </footer>
     </div>
 
-    {% block js_footer %}
+
     {{ assets({files: ['@js_lib/jquery/dist/jquery.min.js']}) }}
     {{ assets({files: ['@js_lib/bootstrap/dist/js/bootstrap.min.js']}) }}
     {{ assets({files: ['@js_lib/perfect-scrollbar/dist/js/min/perfect-scrollbar.jquery.min.js']}) }}
@@ -134,6 +142,10 @@
     {{ assets({files: ['@admin/js/dist/jquery.flot.crosshair.js']}) }}
     {{ assets({files: ['@admin/js/dist/jquery.flot.tooltip.min.js']}) }}
     {{ assets({files: ['@admin/js/dist/chart-page-init.js']}) }}
+    {{ assets({files: ['@admin/js/dist/toastr.min.js']}) }}
+    {% block js_footer %}
     {% endblock %}
+
+    {% embed "@admin/layout/notification.html" %}{% endembed %}
     </body>
 </html>
