--- a/app/code/User/view/templates/admin/user_form.html
+++ b/app/code/User/view/templates/admin/user_form.html
@@ -29,7 +29,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="card">
-            <form class="form-horizontal" action="/admin/user/new" method="post">
+            <form class="form-horizontal" action="{{ action }}" method="post">
                 <div class="card-body">
                     <!-- <h4 class="card-title">Personal Info</h4> -->
                     <div class="form-group row">
