--- a/app/code/Admin/view/templates/layout.html
+++ b/app/code/Admin/view/templates/layout.html
@@ -112,7 +112,7 @@
             <div class="container-fluid">
                 {% block content %}
                 <div class="starter-template">
-                    <h1>Madeira Madeira Project Example</h1>
+                    <h1>Project Example</h1>
                     <p class="lead"></p>
                 </div>
                 {% endblock %}
