--- a/app/code/App/view/templates/home/index.html
+++ b/app/code/App/view/templates/home/index.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="starter-template">
-    <h1>Madeira Madeira Project Example</h1>
+    <h1>Project Example</h1>
     <p class="lead"></p>
 </div>
 {% endblock %}
