--- a/app/code/App/view/templates/home/index.html
+++ b/app/code/App/view/templates/home/index.html
@@ -5,7 +5,7 @@
 {{ assets({files: ['@app/assets/starter-template.css']}) }}
 {% endblock %}
 
-{% block title %}Wellcome!{% endblock %}
+{% block title %}Welcome!{% endblock %}
 
 {% block content %}
 <div class="starter-template">
