Minor fixes frontend

--- a/app/code/Admin/view/templates/layout.html
+++ b/app/code/Admin/view/templates/layout.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <!-- Favicon icon -->
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
         <title>{% block title %}{% endblock %} Madeira Madeira Project</title>
         {{ assets({files: ['@admin/assets/styles.css']}) }}
         {{ assets({files: ['@js_lib/bootstrap/dist/css/bootstrap.min.css']}) }}
@@ -126,7 +126,7 @@
 
     {{ assets({files: ['@js_lib/jquery/dist/jquery.min.js']}) }}
     {{ assets({files: ['@js_lib/bootstrap/dist/js/bootstrap.min.js']}) }}
-    {{ assets({files: ['@js_lib/perfect-scrollbar/dist/js/min/perfect-scrollbar.jquery.min.js']}) }}
+    {{ assets({files: ['@js_lib/perfect-scrollbar/dist/js/perfect-scrollbar.jquery.js']}) }}
     {{ assets({files: ['@js_lib/jquery-sparkline/jquery.sparkline.min.js']}) }}
     <!--Wave Effects -->
     {{ assets({files: ['@admin/js/dist/waves.js']}) }}
