--- a/app/code/Auth/view/templates/login.html
+++ b/app/code/Auth/view/templates/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
     {% block head %}
     <title>{% block title %}{% endblock %} Madeira Madeira Project</title>
     <!-- Custom CSS -->
