PSR2 fix and favicon fix

--- a/app/code/Admin/view/templates/layout.html
+++ b/app/code/Admin/view/templates/layout.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <!-- Favicon icon -->
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
         <title>{% block title %}{% endblock %} Madeira Madeira Project</title>
         {{ assets({files: ['@admin/assets/styles.css']}) }}
         {{ assets({files: ['@js_lib/bootstrap/dist/css/bootstrap.min.css']}) }}
