--- a/app/code/Shelf/Admin/view/templates/layout/header.html
+++ b/app/code/Shelf/Admin/view/templates/layout/header.html
@@ -17,7 +17,7 @@
             <!-- Logo text -->
             <span class="logo-text">
                              <!-- dark Logo text -->
-                             {% embed "@admin/layout/logo.html" %}{% endembed %}
+                             {% embed "@shelf_admin/layout/logo.html" %}{% endembed %}
 
                         </span>
             <!-- Logo icon -->
