--- a/app/code/Shelf/App/view/templates/home/index.html
+++ b/app/code/Shelf/App/view/templates/home/index.html
@@ -1,8 +1,8 @@
-{% extends "@app/layout.html" %}
+{% extends "@shelf_app/layout.html" %}
 
 {% block head %}
 {{ parent() }}
-{{ assets({files: ['@app/assets/starter-template.css']}) }}
+{{ assets({files: ['@shelf_app/assets/starter-template.css']}) }}
 {% endblock %}
 
 {% block title %}Welcome!{% endblock %}
