--- a/app/code/Shelf/App/view/templates/layout.html
+++ b/app/code/Shelf/App/view/templates/layout.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    {% embed "@app/layout/nav.html" %}{% endembed %}
+    {% embed "@shelf_app/layout/nav.html" %}{% endembed %}
     </nav>
 
     <main role="main" class="container">
