Change logo and favicon

--- a/app/code/Shelf/Admin/view/templates/layout.html
+++ b/app/code/Shelf/Admin/view/templates/layout.html
@@ -8,7 +8,10 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <!-- Favicon icon -->
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
         <title>{% block title %}{% endblock %} Madeira Madeira Project</title>
         {{ assets({files: ['@shelf_admin/assets/styles.css']}) }}
         {{ assets({files: ['@js_lib/bootstrap/dist/css/bootstrap.min.css']}) }}
