--- a/app/code/Shelf/Admin/view/templates/assets/custom.css
+++ b/app/code/Shelf/Admin/view/templates/assets/custom.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Boogaloo');
 .logo-text {
-    width: 80%;
+    font-size: 2em;
+    font-family: 'Boogaloo', cursive;
 }
